# FAS-RUST

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/.workflows/: update_docs.yml
.github/workflows/: update_docs.yml
FAS-RUST.wiki/doc/: source-files.js
FAS-RUST.wiki/doc/fas/: all.html  enum.AnimeState.html  enum.Sites.html  index.html  struct.AnimeInfo.html  struct.Episode.html
FAS-RUST.wiki/doc/fas/animeunity/: constant.LINK.html  fn.get_episodes_link.html
FAS-RUST.wiki/doc/fas/animeworld/: constant.LINK.html  fn.get_episodes_link.html
FAS-RUST.wiki/doc/fas/aniplay/: fn.get_anime_episodes.html  fn.get_episodes_link.html  index.html
FAS-RUST.wiki/doc/implementors/core/marker/: trait.Freeze.js
FAS-RUST.wiki/doc/src/fas/animeunity/: mod.rs.html
src/: lib.rs  mod.rs
src/animeunity/: mod.rs
src/animeworld/: mod.rs
src/aniplay/: mod.rs
tests/: mod.rs
wiki/doc/: crates.js  help.html  search-index.js  settings.html
wiki/doc/fas/: sidebar-items.js  struct.Anime.html  struct.AnimeEpisodes.html  struct.Video.html
wiki/doc/fas/animeunity/: fn.get_anime_episodes.html  fn.search.html  index.html
wiki/doc/fas/animeworld/: fn.get_anime_episodes.html  fn.search.html  index.html  sidebar-items.js
wiki/doc/fas/aniplay/: constant.LINK.html  fn.search.html
wiki/doc/implementors/core/fmt/: trait.Debug.js
wiki/doc/implementors/core/marker/: trait.Send.js  trait.Sync.js  trait.Unpin.js
wiki/doc/src/fas/: lib.rs.html
wiki/doc/src/fas/animeworld/: mod.rs.html
wiki/doc/src/fas/aniplay/: mod.rs.html
(+2 files in other folders)
